--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -4,6 +4,6 @@
     <div class="jumbotron" style="background-image: url('{% static 'images/jumbocrop1.jpg'%}')"; >
         <h1>Welcome to Naturiere</h1>
         <h2>Where Beauty meets Nature</h2>
-        <h3><a class="navbar-link" href="{% url 'customer' %}">Sign Up for our Newsletter and Savings</a></h3>
+        <h3><a class="navbar-link" href="#">Sign Up for our Newsletter and Savings</a></h3>
     </div>
   {% endblock %}
