--- a/customer/templates/customer/about.html
+++ b/customer/templates/customer/about.html
@@ -4,6 +4,9 @@
     <div class="jumbotron" style="background-image: url('{% static 'images/jumbocrop1.jpg'%}')"; >
         <h1>Welcome to Naturiere</h1>
         <h2>Where Beauty meets Nature</h2>
-        <h3><a class="navbar-link" href="{% url 'sign_up' %}">Sign Up for our Newsletter and Savings</a></h3>
+        <h3>Here is our story</h3>
+        <p>
+            Story time
+        </p>
     </div>
   {% endblock %}
