forum is displaying first levels

--- a/customer/templates/customer/login_view.html
+++ b/customer/templates/customer/login_view.html
@@ -1,9 +1,6 @@
-
-{% extends 'intro/navigation.html' %}
-{% block title %}Log In{% endblock %}
-{% block login_active %}active{% endblock %}
-
-{% block body %}
+{% extends 'customer/base.html' %}
+{% load staticfiles %}
+{% block body_block%}
 <div class="container-fluid">
 
     <div class="row">
