--- a/customer/templates/customer/base.html
+++ b/customer/templates/customer/base.html
@@ -4,9 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>Naturiere</title>
+    <link rel="icon" type="image/png" href="{% static "images/N3.png" %}" />
     <!-- Latest compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/css?family=Courgette|Satisfy|Tangerine" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static "css/naturiere.css" %}" />
   </head>
 
@@ -18,24 +21,23 @@
           <li><a class="navbar-link" href="{% url 'about' %}">Our Story</a></li>
           
           <li><a class="navbar-link" href="#">Products</a></li>
+          
+          {% if user.username == "bill"  %}
         
           <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
-        
+        {% endif %}
 
         </ul>
         
         <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
         <li>
-          <a href="{% url 'blog:post_new' %}" >New Post</a>
+          <a href="{% url 'forum' %}" >Forum</a>
         </li>
 
-        <li>
-          <a href="{% url 'blog:post_draft_list' %}">Drafts</a>
-        </li>
           <li><a class="navbar-link" href="#">Account</a></li>
         <li>
-          <a href="{% url 'logout' %}" >Log out</a>
+          <a href="{% url 'logout_view' %}" >Log out</a>
         </li>
 
         <li>
@@ -43,7 +45,7 @@
         </li>
           {% else %}
           <li><a class="navbar-link" href="{% url 'sign_up' %}">Sign Up</a></li>
-          <li><a class='nav navbar-right' href="{% url 'login' %}" ><span class="glyphicon glyphicon-user"></span></a></li>
+          <li><a class='nav navbar-right' href="{% url 'login_view' %}" ><span class="glyphicon glyphicon-user"></span></a></li>
         {% endif %}
 
       </ul>
