--- a/customer/templates/customer/sign_up.html
+++ b/customer/templates/customer/sign_up.html
@@ -1,9 +1,40 @@
 {% extends "customer/base.html" %}
 {% load staticfiles %}
   {% block body_block%}
-    <div class="jumbotron" style="background-image: url('{% static 'images/jumbocrop1.jpg'%}')"; >
+   
         <h1>Welcome to Naturiere</h1>
         <h2>Where Beauty meets Nature</h2>
         <h3>Please fill out the fields, below</h3>
+        
+
+
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h3>Register for an Account</h3>
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                    <form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% include 'customer/form_template.html' %}
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-success">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="panel-footer">
+                    Already have an account? <a href="{% url 'login_view' %}">Click here</a> to log in.
+                </div>
+            </div>
+        </div>
     </div>
-  {% endblock %}
+
+
+{% endblock %}        
+        
+        
+
