--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
+{% block body_block %}
     <h1>New comment</h1>
     <form method="POST" class="post-form">
     {% csrf_token %}
@@ -8,6 +8,6 @@
     <button type="submit" class="save btn btn-default">Post Comment</button>
     </form>
 
-    <script>var editor = new MediumEditor('.editable');</script>
+  
 
 {% endblock %}
