--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
-
-{% block content %}
+{% load staticfiles %}
+{% block body_block %}
 
 
         <h1 class='posttitle loader'>{{ post.title }}</h1>
