--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -4,6 +4,48 @@
     <div class="jumbotron" style="background-image: url('{% static 'images/jumbocrop1.jpg'%}')"; >
         <h1>Welcome to Naturiere</h1>
         <h2>Where Beauty meets Nature</h2>
-        <h3><a class="navbar-link" href="{% url 'sign_up' %}">Sign Up for our Newsletter and Savings</a></h3>
+         {% if user.username %}
+       <h3>Would you like to take a survey?</h3>
+        {% else %}
+        <h3><a href="{% url 'sign_up' %}">Sign Up for our Newsletter and Savings</a></h3>
+        {% endif %}
     </div>
+    
+     {% if user.username %}
+     
+     <h3>News and Articles</h3>
+     
+     {% for article in all_articles %}
+            <div class="panel panel-primary">
+               
+                <div class="panel-heading">
+                    <h3> {{ article.title }} </h3>
+                </div>
+                 <div class="panel-body">
+                    {{ article.text }}
+                </div>
+                {% if article.link %}
+                <div class = "panel-footer">
+                   <a  href= "{{ article.link }}">link </a> 
+                </div>
+                {% endif %}
+                                    
+             </div>
+            {% endfor %}
+     
+     
+     <h3>Our Latest Post</h3>
+     
+        <div class="panel panel-info">
+               
+                <div class="panel-heading">
+                    <h3> {{ post.title }} </h3>
+                </div>
+                 <div class="panel-body">
+                    {{ post.text }}
+                </div>
+                <div class = "panel-footer">
+                   by {{ post.author }} on {{ post.created_date }} 
+                </div>
+       {% endif %}         
   {% endblock %}
