--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block body_block %}
-    <h1>New comment</h1>
+    <h1>New comment for: <em> {{ title }}  </em> </h1>
     <form method="POST" class="post-form">
     {% csrf_token %}
     {{form.as_p}}
