--- a/blog/templates/blog/forum.html
+++ b/blog/templates/blog/forum.html
@@ -35,7 +35,7 @@
                 </div>
                 
                  <div class="panel panel-info col-md-offset-1 ">
-                    <div class="panel-heading"><h4>Comments on {{ post.title }}</h4></div>
+                    <div class="panel-heading"><h4>Comments on: <em>  {{ post.title }} </em></h4></div>
                     <div class="panel-body">
                      <ul class="list-group">
                         {% for comment in post.comments.all %}
@@ -45,12 +45,12 @@
                          <div class = "panel-footer">
                       
                       
-                            by {{ comment.author }} on {{ comment.created_date }}  <a href="{% url 'add_comment_to_post' post.id %}" >Add Comment</a>
+                            by {{ comment.author }} on {{ comment.created_date }}  
                       
                           </div>  
                          
                         {% endfor %}   
-                        
+                        <a href="{% url 'add_comment_to_post' post.id %}" class="btn btn-info">Add Comment</a>
                         
                    </div>
                 
