--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -6,7 +6,7 @@
     <title>Naturiere</title>
     <link rel="icon" type="image/png" href="{% static "images/N3.png" %}" />
     <!-- Latest compiled and minified CSS -->
-       <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <link href="https://fonts.googleapis.com/css?family=Courgette|Satisfy|Tangerine" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -14,29 +14,25 @@
     <link rel="stylesheet" href="{% static "css/naturiere.css" %}" />
   </head>
 
-<body>
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <ul class="nav navbar-nav">
-          <li><a class="navbar-brand" href="{% url 'index' %}"><span class = "naturiere">Naturiere</span></li>
-          <li><a class="navbar-link" href="{% url 'about' %}">Our Story</a></li>
-          
-          <li><a class="navbar-link" href="{% url 'products' %}">Products</a></li>
-          
-          {% if user.username == "bill"  %}
-        
-          <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
-        {% endif %}
+<body class='loader'>
 
-        </ul>
+
+  <nav class="navbar navbar-default">
+    <div class="container">
+
+
+      <ul class="nav navbar-nav">
+         <li><a class="navbar-brand" href="{% url 'index' %}"><span class = "naturiere">Naturiere</span></li>
+        <li><a href="{% url 'about'%}">About</a></li>
         
-        <ul class="nav navbar-nav navbar-right">
+           
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-        <li>
-          <a href="{% url 'forum' %}" >Forum</a>
-        </li>
+     
 
-          <li><a class="navbar-link" href="#">Account</a></li>
+      
         <li>
           <a href="{% url 'logout_view' %}" >Log out</a>
         </li>
@@ -45,16 +41,12 @@
           <a >Welcome: {{ user.username }}</a>
         </li>
           {% else %}
-          <li><a class="navbar-link" href="{% url 'sign_up' %}">Sign Up</a></li>
           <li><a class='nav navbar-right' href="{% url 'login_view' %}" ><span class="glyphicon glyphicon-user"></span></a></li>
         {% endif %}
 
       </ul>
-        
-      </div>
-    </nav>
-
-
+  </div>
+</nav>
 
     <div class="container">
     {% block body_block %}
@@ -62,8 +54,7 @@
   
   
     {% endblock %}
-    </div>
 
 
-  </body>
+</body>
 </html>
